[tool.poetry]
name = "ebay-feedsdk"
version = "0.1.0"
description = "Port of https://github.com/eBay/FeedSDK-Python to python3"
authors = ["Lars Erler <lars@xaospage.de>"]

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
urllib3 = "^1.26.4"
certifi = "^2020.12.5"
aenum ="^3.00"
pandas ="^1.2.4"
SQLAlchemy ="^1.3.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
