[tool.poetry]
name = "ebay-feedsdk"
version = "0.2.3"
description = "Port of https://github.com/eBay/FeedSDK-Python and https://github.com/eBay/ebay-oauth-python-client to python3"
authors = ["Lars Erler <lars@xaospage.de>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/taxaos/FeedSDK-Python"
repository = "https://github.com/taxaos/FeedSDK-Python"
keywords = ["ebay", "ebay-feedsdk"]
classifiers = [
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE.md",
]
[tool.poetry.dependencies]
python = "^3.7.1"
urllib3 = "^1.26.4"
certifi = "^2020.12.5"
aenum ="^3.00"
pandas ="^1.1.1"
SQLAlchemy ="^1.3.8"
PyYAML = "^5.4.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
